--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div style="margin-top: 30px;">
         <div class="container">
             <div class="row" style="margin-bottom: 0px;">
-                <div class="col-md-6 col-xl-6 offset-xl-0" style="margin-bottom: 30px;height: 153px;border-color: 02b5e1;max-height: 150px;margin-top: 0px;">
+                <div class="col-md-6 col-xl-6 offset-xl-0" style="margin-bottom: 30px;border-color: 02b5e1;max-height: 400px;margin-top: 0px;">
                     <h1 style="text-align: center;font-weight: 200;margin-bottom: 20px;width: 100%;">Gerhard Molin</h1>
                     <h1 style="text-align: center;font-weight: 200;margin-bottom: 20px;width: 100%;font-size: 30px;margin-left: 0px;">Software Engineer / UX Engineer</h1>
                     <p style="text-align: center;margin-bottom: 40px;margin-top: 20px;">Email: <a href="mailto:gerhard@minimumbadass.com" target="_blank">gerhard@minimumbadass.com</a><br></p>
@@ -63,7 +63,7 @@
                                 <h4 class="card-title" style="margin-right: 0px;font-size: 16px;font-weight: 500;">Compilation, Simplistic virtual machine<br>Simplistic assembly language, Visual rendering and&nbsp;Adaptation &amp; creativity<br><br></h4>
                                 <p class="card-text" style="margin-right: 0px;">This project involves creating a virtual arena, and having simplistic-language programs fight each other. You will get acquainted with VM conception (with the instructions it recognizes, the registers, etc.) and compilation problems of an assembly language in bytecode. In bonus, you’ll have the pleasure of having your champions fight in the arena.<br></p>
                                 <p>Technologies:</p>
-                                <p class="card-text badge badge-dark" style="margin-right: 0px;">C<br></p><br>
+                                <p class="card-text badge badge-dark" style="margin: 5px;">Assembly</p><p class="card-text badge badge-dark" style="margin: 5px;">C<br></p><br>
                                 <a href="https://github.com/avocadohooman/42-Corewar" target="_blank">Go to Github</a>
                             </div>
                         </div>
